Fix tooltip message wrapping (#583)

--- a/packages/graphql-playground-react/src/styles/graphiql_light.css
+++ b/packages/graphql-playground-react/src/styles/graphiql_light.css
@@ -1321,8 +1321,6 @@ p:first-child,
   position: fixed;
   -webkit-transition: opacity 0.4s;
   transition: opacity 0.4s;
-  white-space: pre-wrap;
-  white-space: pre;
   z-index: 100;
 }
 
